# TuxChat

./: .gitignore  README.md
Terminal/client/: Makefile  chat_client  chat_client.cpp  config.h
Terminal/server/: chat_server  chat_server.cpp  config.h
Ui/qtchatclient/: CMakeLists.txt  main.cpp  main.qml  resources.qrc  tcpclient.cpp  tcpclient.h
Ui/qtchatserver/: CMakeLists.txt  main.cpp  main.qml  tcpserver.cpp  tcpserver.h
Ui/qtchatserver/buid/: CMakeCache.txt  Makefile  cmake_install.cmake
Ui/qtchatserver/buid/ChatServer_autogen/: deps
Ui/qtchatserver/buid/ChatServer_autogen/EWIEGA46WW/: moc_tcpserver.cpp.d
client/: chat_client  chat_client.cpp
server/: Makefile  chat_server  chat_server.cpp
